# banner

./: .env_example  .gitignore  README.md  docker-compose.yml  pyproject.toml  setup.cfg  start.sh
docs/v.1.0.0/: api.html  api.yaml
src/: .dockerignore  Dockerfile  alembic.ini
src/app/: controller.py  service.py
src/app/api/: routes.py
src/app/api/auth/: handler.py
src/app/api/banner/: handler.py  schemas.py
src/app/api/create_banner/: handler.py  schemas.py
src/app/api/delete_banner/: handler.py
src/app/api/healthz/: ready.py
src/app/api/update_banner/: handler.py  schemas.py
src/app/api/user_banner/: handler.py  schemas.py
src/app/config/: config.py
src/app/models/: banner.py
src/app/source/: base.py
src/app/system/loging/: auth.py  base.py  schemas.py
src/migrations/: env.py
src/migrations/versions/: a359a29e7732_creation_table.py
src/tests/: conftest.py
src/tests/integration/api/user_banner/: test_handler.py
